redirecting to old portfolio

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Coming Soon ! :)
+<html>
+   <head>
+      <title>Devin</title>
+      <meta http-equiv = "refresh" content = "2; url = https://devinchandula.blogspot.com" />
+   </head>
+   <body>
+   </body>
+</html>
