--- a/index.html
+++ b/index.html
@@ -3,6 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Devin de Silva - Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="bg-primary text-white text-center py-4">
+        <h1>Devin de Silva</h1>
+        <p>Senior Software Engineer</p>
+    </header>
+
+    <section class="container my-5">
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <img src="assets/profile.jpg" alt="Devin de Silva" class="img-fluid rounded-circle mb-3">
+                <h2>Contact</h2>
+                <p>
+                    Address<br>
+                    Phone: <br>
+                    Email: <a href="mailto:devinchandula@gmail.com">devinchandula@gmail.com</a>
+                </p>
+                <div>
+                    <a href="https://www.linkedin.com/in/devin96" class="btn btn-outline-primary btn-sm">LinkedIn</a>
+                    <a href="https://github.com/devin1996" class="btn btn-outline-secondary btn-sm">GitHub</a>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <h2>About Me</h2>
+                <p>IT professional with 4+ years of experience in the software industry...</p>
+                <h3>Core Skills</h3>
+                <ul>
+                    <li>Root cause analysis and creative problem-solving</li>
+                    <li>Team collaboration and communication</li>
+                    <li>Adaptability to new technologies</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-light py-5">
+        <div class="container">
+            <h2 class="text-center">Technical Skills</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Programming</h3>
+                    <p>Java, Python, C++, JavaScript, Node.js</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Web Development</h3>
+                    <p>MEAN Stack, PHP, HTML/CSS, Bootstrap</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Database</h3>
+                    <p>MySQL, MongoDB, Firebase</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container my-5">
+        <h2>Experience</h2>
+        <div>
+            <h3>Senior Software Engineer - SimCentric Technologies</h3>
+            <p>April 2024 - Present</p>
+            <ul>
+                <li>Developed SAF-FORESIGHT using Java Spring Boot, Docker, Angular, and Cesium JS.</li>
+                <li>Contributed to SAF-FIRES with scalable and image generator solutions.</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Software Engineer - HCL Technologies</h3>
+            <p>May 2021 - January 2022</p>
+            <ul>
+                <li>Worked on Salesforce CRM projects and best practices.</li>
+            </ul>
+        </div>
+    </section>
+
+    <footer class="text-center bg-primary text-white py-3">
+        <p>&copy; 2024 Devin de Silva | Built with Bootstrap</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devin</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -154,3 +243,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+ -->
